mai_htq 22h 27/01/2021 up

--- a/src/app/student/mai-htq/list-instructor/list-instructor.component.css
+++ b/src/app/student/mai-htq/list-instructor/list-instructor.component.css
@@ -139,4 +139,16 @@ table.table .avatar {
   margin-right: 32%;
 }
 
+h2{
+  font-size: 30px;
+}
 
+#status {
+  width: 25%;
+  text-align: center;
+}
+
+#statusNew {
+  width: 25%;
+  text-align: center;
+}
