--- a/src/app/student/mai-htq/detail-teacher/detail-teacher.component.html
+++ b/src/app/student/mai-htq/detail-teacher/detail-teacher.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-sm-1"></div>
   <div class="col-sm-10 p-0">
-    <form [ngModel]="formView">
+    <form [ngModel]="formView" [ngModelOptions]="{standalone: true}">
       <div class="text-center mb-4">
         <h1 class="modal-title w-100 dark-grey-text font-weight-bold my-2" style="color: #435d7d;"
             id="add">
-          <strong>Detail Information Teacher</strong></h1>
+          <strong>Thông tin chi tiết giáo viên</strong></h1>
       </div>
       <div class="modal-body">
         <div class="row form-group">
@@ -57,7 +57,7 @@
     </form>
 
     <div class="row justify-content-center">
-      <button mat-dialog-close class="btn btn-secondary mr-3" style="width: 100px" (click)="closeDialog()">Close</button>
+      <button mat-dialog-close class="btn btn-secondary mr-3" style="width: 100px" (click)="closeDialog()">Đóng</button>
     </div>
   </div>
   <div class="col-sm-1"></div>
