--- a/src/app/student/list-student/list-student.component.html
+++ b/src/app/student/list-student/list-student.component.html
@@ -7,15 +7,15 @@
             <h2><b>DANH SÁCH SINH VIÊN</b></h2>
           </div>
         </div>
-        <div class="row col-sm-12 col-xl-12">
-          <div class="col-sm-6 col-xl-6 col-lg-6 col-md-6 d-flex justify-content-bottom">
-            <a href="#" class="btn btn-success" data-toggle="modal" (click)="openDialogCreate()" ><i
+        <div class="row col-sm-12 col-xl-12 d-flex form-inline">
+          <div class="col-sm-6 col-xl-6 col-lg-6 col-md-6 d-flex justify-content-bottom form-inline mt-2">
+            <a class="btn btn-success" data-toggle="modal" (click)="openDialogCreate()" ><i
               class="material-icons">&#xE147; </i><span>Thêm mới sinh viên</span></a>
           </div>
-          <div class="col-sm-6 col-xl-6 col-lg-6 col-md-6 d-flex justify-content-end form-inline">
-            <input type="text" class="form-control form-control-sm rounded "
+          <div class="row col-sm-6 col-xl-6 col-lg-6 col-md-6 d-flex justify-content-end form-inline">
+            <input type="text" class="form-control form-control-sm rounded mt-2"
                    placeholder="Nhập từ khóa tìm kiếm" (keydown.enter)="search()" [(ngModel)]="valueSearch" #value>
-            <button type="button" class="search btn btn-info" (click)="search()" >
+            <button type="button" class="search btn btn-info mt-2" (click)="search()" >
               <i class="fa fa-search"></i></button>
           </div>
         </div>
@@ -25,35 +25,33 @@
         <ng-template #block>
           <small class="font-weight-bold">Tổng số thành viên là: 0</small>
         </ng-template>
-        <table class=" table table-striped table-hover text-center">
+        <table class=" table table-striped table-hover"   >
           <thead>
           <tr>
-            <th>STT</th>
-            <th>Mã SV</th>
-            <th>Họ và tên</th>
-            <th>Tên đề tài</th>
-            <th>Tên giáo viên</th>
+            <th class="abc" style="width: 2%">STT</th>
+            <th style="width : 7%">Mã SV</th>
+            <th style="width: 18%">Họ và tên</th>
+            <th style="width: 11%">Tên đề tài</th>
+            <th style="width: 18%">Tên giáo viên</th>
             <th>Email</th>
-            <th>Điện Thoại</th>
-            <th>Tác vụ</th>
+            <th class="text-right" style="width: 5%">Điện Thoại</th>
+            <th style="width: 10%">Tác vụ</th>
           </tr>
           </thead>
           <tbody *ngIf="list; else blockList">
           <tr *ngFor="let student of list |paginate: { itemsPerPage: 5, currentPage: p} , let i = index">
-            <td>{{i + 1}}</td>
+            <td style="text-align: right">{{i + 1}}</td>
             <td>{{student.studentCode}}</td>
-            <td style="margin-left: 100px">{{student.fullName}}</td>
-            <td *ngIf="student.studentGroup != null">
-              {{student.studentGroup.checkThesis.thesis.statement}}</td>
-            <td *ngIf="student.studentGroup == null">
-              {{student.topic}}</td>
+            <td style="text-align: left">{{student.fullName}}</td>
+            <td *ngIf="student.studentGroup != null">{{student.studentGroup.checkThesis.thesis.statement}}</td>
+            <td *ngIf="student.studentGroup == null">{{student.topic}}</td>
             <td *ngIf="student.studentGroup != null">{{student.studentGroup.teacher.fullName}}</td>
             <td *ngIf="student.studentGroup == null">{{student.teacher}}</td>
             <td>{{student.email}}</td>
-            <td>{{student.phone}}</td>
-            <td>
-              <a class="text-warning"><i class="material-icons" data-toggle="tooltip" title="Sửa">edit</i></a>
-              <a class="text-danger"><i class="material-icons" data-toggle="tooltip" title="Xoá">delete</i></a>
+            <td style="text-align: right">{{student.phone}}</td>
+            <td style="text-align: center">
+              <a class="text-warning"><i class="material-icons mt-1" data-toggle="tooltip" title="Sửa">edit</i></a>
+              <a class="text-danger"><i class="material-icons mt-1" data-toggle="tooltip" title="Xoá">delete</i></a>
             </td>
           </tr>
           </tbody>
