--- a/src/app/student/thesis-detail-send/thesis-detail-send.component.html
+++ b/src/app/student/thesis-detail-send/thesis-detail-send.component.html
@@ -1,17 +1,28 @@
 <div class="progress-report">
   <form (ngSubmit)="uploadFile()" [formGroup]="formUpload">
-    <div>
-      <label>File báo cáo</label>
+    <div class="form-group">
+      <label style="font-size: 20px">File báo cáo</label>
       <input class="progress__file-name" style="" type="text" disabled>
       <input type="button" class="progress__choose-file-btn btn btn-primary" value="Chọn file">
       <input id="get-file" type="file" (change)="dropFile($event.target.files)" formControlName="progressFile">
+      <br>
+      <small id="error-choose-file" style="color: red; font-size:15px">Hãy chọn file để gửi</small>
     </div>
     <div>
+      <div class="form-group">
+        <label style="font-size: 20px"><input type="radio" id="check-report-1" value="1" name="check-report"> Báo cáo 1</label>
+        <label style="font-size: 20px"><input type="radio" id="check-report-2" value="2" name="check-report"> Báo cáo 2</label>
+        <input id="check-report" type="hidden" formControlName="checkReport"><br>
+        <small id="error-choose-report" style="color: red; font-size:15px">Hãy chọn loại báo cáo</small>
+      </div>
+    </div>
+    <div class="form-group">
       <div class="progress__label-content">
-        <span>Nội dung</span>
+        <span style="font-size: 20px">Nội dung</span>
       </div>
       <div>
-        <textarea class="progress__content" formControlName="description"></textarea>
+        <textarea class="progress__content" formControlName="description"></textarea><br>
+        <small id="error-choose-content" style="color: red; font-size:15px">Hãy nhập chú thích cho báo cáo</small>
       </div>
     </div>
     <div class="progress__btn-submit">
