--- a/src/app/teacher/student-group-management/management-student-group/management-student-group.component.html
+++ b/src/app/teacher/student-group-management/management-student-group/management-student-group.component.html
@@ -11,14 +11,13 @@
           <th>Tên Nhóm</th>
           <th>Số Lượng SV Nhóm</th>
           <th>Xem Chi Tiết SV</th>
-          <!--          <th>Đã kiểm duyệt</th>-->
           <th>Xóa Nhóm</th>
         </tr>
         </thead>
         <tbody>
         <tr
-          *ngFor="let list of groupList">
-          <td>{{list.id}}</td>
+          *ngFor="let list of groupList|paginate: { itemsPerPage: 4, currentPage: p}, let i = index">
+          <td>{{i + 1}}</td>
           <td>{{list.groupName}}</td>
           <td style="margin-left: 50px;">{{list.quantity}}</td>
           <td>
@@ -30,6 +29,10 @@
         </tr>
         </tbody>
       </table>
+      <div class="mt-3 d-flex justify-content-end">
+        <pagination-controls (pageChange)="p = $event" previousLabel="Trước" nextLabel="Sau"
+                             responsive="true"></pagination-controls>
+      </div>
     </div>
   </div>
 </main>
