--- a/src/app/teacher/check-thesis/check-thesis.component.html
+++ b/src/app/teacher/check-thesis/check-thesis.component.html
@@ -4,12 +4,12 @@
       <div class="table-title">
         <div class="row">
           <div class="col-sm-6">
-            <h2>Danh sách đề tài</h2>
+            <h2>Danh sách đề tài chưa duyệt</h2>
           </div>
         </div>
       </div>
       <form (ngSubmit)="saveCheckThesis()">
-        <table id="table" class="table table-striped table-hover">
+        <table *ngIf="checkThesis" id="table" class="table table-striped table-hover">
           <thead>
           <tr class="check-thesis-table">
             <th width="5%">STT</th>
@@ -35,8 +35,7 @@
                 <input type="checkbox" id="thesis{{thesis.status}}"
                        (change)="changeCheckbox(thesis,i)"
                        [checked]="thesis.status"
-                       (click)="doCheck(thesis,i)"
-                       [disabled]="thesis.status ==true">
+                       (click)="doCheck(thesis,i)">
               </label>
             </td>
           </tr>
@@ -47,3 +46,54 @@
     </div>
   </div>
 </div>
+
+
+<div class="check-thesis mt-5">
+  <div class="table-responsive">
+    <div class="table-wrapper">
+      <div class="table-title">
+        <div class="row">
+          <div class="col-sm-6">
+            <h2>Danh sách đề tài đã duyệt</h2>
+          </div>
+        </div>
+      </div>
+
+      <table *ngIf="checkThesisApproved" class="table table-striped table-hover">
+        <thead>
+        <tr class="check-thesis-table">
+          <th width="5%">STT</th>
+          <th width="15%">Tên Nhóm</th>
+          <th width="15%">Số Lượng SV</th>
+          <th width="40%">Tên Đề Tài</th>
+          <th width="10%">Chi Tiết</th>
+          <th width="15%">Đồng Ý</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let thesis of checkThesisApproved, let i = index">
+          <td class="table1">{{i + 1}}</td>
+          <td class="table1">{{thesis.groupName}}</td>
+          <td class="table1">{{thesis.quantity}}</td>
+          <td>{{thesis.statement}}</td>
+          <td class="table1">
+            <a href="#detail" (click)="openDialogApproved(i)" class="detail" data-toggle="modal">
+              <i class="material-icons">remove_red_eye</i></a>
+          </td>
+          <td class="table1">
+            <label class="custom-checkbox" for="thesis{{thesis.status}}">
+              <input type="checkbox"
+                     (change)="changeCheckbox(thesis,i)"
+                     [checked]="thesis.status"
+                     (click)="doCheck(thesis,i)"
+                     [disabled]="thesis.status ===true">
+            </label>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+
