--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -107,7 +107,7 @@
             <h2 class="mb-0">
               <a data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
                  aria-controls="collapseTwo">
-                <span><i class="fa fa-graduation-cap" aria-hidden="true"></i> Quản lý sinh viên</span>
+                <span><i class="fa fa-graduation-cap" aria-hidden="true"></i> Quản lý khóa luận</span>
                 <i class="fa fa-chevron-down toggle rotate"></i>
               </a>
             </h2>
@@ -116,18 +116,10 @@
                data-parent="#accordionExample">
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-users" aria-hidden="true"></i>
-                  Danh sách sinh viên
-                </a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-address-card"
-                                                           aria-hidden="true"></i> Thêm thông tin
-                  sinh viên</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-pencil" aria-hidden="true"></i>
-                  Sửa thông tin
-                  sinh viên </a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-trash" aria-hidden="true"></i>Xóa
-                  thông tin sinh
-                  viên</a></li>
+                <li class="list-group-item"><a [routerLink]="'student/subscribe/1'"><i class="fa fa-font"></i>Đăng ký đề tài</a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-bell"></i> Notifications</a>
+                </li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-map"></i> Maps</a></li>
               </ul>
             </div>
           </div>
@@ -159,21 +151,13 @@
             <h2 class="mb-0">
               <a data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
                  aria-controls="collapseFour">
-                <span><i class="fa fa-book" aria-hidden="true"></i>Quản lý đề tài</span>
+                <span><i class="fa fa-book" aria-hidden="true"></i>Đăng ký đề tài</span>
                 <i class="fa fa-chevron-down toggle"></i>
               </a>
             </h2>
           </div>
           <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
                data-parent="#accordionExample">
-            <div class="card-body">
-              <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-font"></i> Typography</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-bell"></i> Notifications</a>
-                </li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-map"></i> Maps</a></li>
-              </ul>
-            </div>
           </div>
         </div>
         <div class="card">
