--- a/src/app/student/subscribe-thesis/notification/notification.component.css
+++ b/src/app/student/subscribe-thesis/notification/notification.component.css
@@ -1,7 +1,14 @@
 button {
-  margin-top: -3.5%;
+  margin: 1% 3.3% 0 0;
 }
 
 h1 {
-  margin: 0.5% 0 0 0;
+  margin: 0 0 0 0;
+  text-align: center;
+}
+
+i.material-icons {
+  margin: -2.5% 0 0 45%;
+  color: red;
+  font-size: 60px;
 }
