--- a/src/app/student/student-edit/student-edit.component.html
+++ b/src/app/student/student-edit/student-edit.component.html
@@ -16,8 +16,8 @@
     </div>
     <div class="form-group row ">
       <label class="col-sm-3 col-form-label">GV hướng dẫn:<sup class="text-danger">*</sup> </label>
-      <div class="col-sm-8" *ngIf="list1">
-        <select class="form-control d-flex justify-content-start"  required>
+      <div class="col-sm-8">
+        <select class="form-control d-flex justify-content-start" formControlName="teacher">
           <option *ngFor="let teacher of list1">{{teacher.fullName}}</option>
         </select>
       </div>
@@ -25,8 +25,7 @@
     <div class="form-group row ">
       <label class="col-sm-3 col-form-label">Tên đề tài<sup class="text-danger">*</sup> </label>
       <div class="col-sm-8">
-        <select class="form-control d-flex justify-content-start" formControlName="topic" required>
-          <option value="" selected="selected">Vui lòng chọn đề tài</option>
+        <select class="form-control d-flex justify-content-start" formControlName="topic">
           <option *ngFor="let thesis of list2" value="{{thesis.statement}}">{{thesis.statement}}</option>
         </select>
       </div>
@@ -46,7 +45,7 @@
     <div class="row d-flex justify-content-center ml-4">
       <div>
         <button class="btn btn-secondary btn btn-sm" style="width: 80px" [mat-dialog-close]="">Hủy</button>
-        <button [disabled]="formEditStudent.invalid" style="width: 80px" class="btn btn-warning btn btn-sm mx-4" (click)="editStudent()">Sửa</button>
+        <button style="width: 80px" class="btn btn-warning btn btn-sm mx-4" (click)="editStudent()">Sửa</button>
       </div>
     </div>
   </form>
