up 16h11 29/01 merge Mai version 2

--- a/src/app/student/mai-htq/detail-teacher/detail-teacher.component.html
+++ b/src/app/student/mai-htq/detail-teacher/detail-teacher.component.html
@@ -1,22 +1,13 @@
 <div class="row">
   <div class="col-sm-1"></div>
   <div class="col-sm-10 p-0">
-    <form [ngModel]="formView" [ngModelOptions]="{standalone: true}">
+    <form>
       <div class="text-center mb-4">
         <h1 class="modal-title w-100 dark-grey-text font-weight-bold my-2" style="color: #435d7d;"
             id="add">
           <strong>Thông tin chi tiết giáo viên</strong></h1>
       </div>
       <div class="modal-body">
-        <div class="row form-group">
-          <div class="col-5">
-            <label>Teacher Code :</label>
-          </div>
-          <div class="col-7 p-0">
-            <p>{{formView.teacherCode}}</p>
-          </div>
-        </div>
-
         <div class="row form-group">
           <div class="col-5">
             <label>Full Name :</label>
@@ -33,15 +24,6 @@
           </div>
             <div class="col-7 p-0">
               <p>{{formView.email}}</p>
-            </div>
-          </div>
-
-          <div class="row form-group">
-            <div class="col-5">
-              <label>Identity Number : </label>
-            </div>
-            <div class="col-7 p-0">
-              <p>{{formView.identityNumber}}</p>
             </div>
           </div>
 
