--- a/src/app/teacher/list-student/list-student.component.html
+++ b/src/app/teacher/list-student/list-student.component.html
@@ -19,7 +19,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let student of students; let i = index">
+        <tr *ngFor="let student of students |paginate: { itemsPerPage: 4, currentPage: p}, let i = index">
           <td class="table1" width="10%">{{i + 1}}</td>
           <td class="table2" width="25%">{{student.fullName}}</td>
           <td class="table1" width="20%">{{student.nameGroup}}</td>
@@ -28,6 +28,10 @@
         </tr>
         </tbody>
       </table>
+      <div align="end">
+        <pagination-controls (pageChange)="p = $event" previousLabel="Trước" nextLabel="Sau"
+                             responsive="true"></pagination-controls>
+      </div>
     </div>
   </div>
 </div>
