vinh_mtv 31/01/2021 20:42 xong list, upload thesis detail và instruction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
               duyệt đề tài</a>
             <a href="#" class="dropdown-item"><i class="fa fa-users" aria-hidden="true"></i> Danh
               sách sinh viên</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-spinner" aria-hidden="true"></i> Quản
+            <a routerLink="/teacher/thesis-detail-list" class="dropdown-item"><i class="fa fa-spinner" aria-hidden="true"></i> Quản
               lý tiến độ</a>
             <a routerLink="/teacher/feed-back" class="dropdown-item"><i class="fa fa-commenting" aria-hidden="true"></i>Thắc
               mắc sinh viên</a>
